--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,15 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^12.0",
-        "php-cs-fixer/shim": "^3.0"
+        "phpstan/phpstan": "^1.10",
+        "friendsofphp/php-cs-fixer": "^3.40"
     },
     "scripts": {
-        "test": "phpunit",
-        "cs-fix": "php-cs-fixer fix"
+      "phpstan": "@php vendor/bin/phpstan analyse",
+      "test": "@php vendor/bin/phpunit",
+      "test-coverage-html": "@php vendor/bin/phpunit --coverage-html .phpunit.cache",
+      "lint": "@php vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php --diff --dry-run --using-cache=no --allow-risky=yes",
+      "lint-fix": "@php vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php --allow-risky=yes"
     },
     "config": {
         "sort-packages": true
