--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ["8.1", "8.2", "8.3", "8.4"]
+        php-versions: ["8.3", "8.4"]
 
     name: Tests PHP with ${{ matrix.php-versions }}
     
